fixed problem with 20-sim not launching